tests/snapshots/examples_fixtures/type_classes__EqAuditLogExample__Flow__AuditLog.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/EqAuditLogExample/Flow/AuditLog.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `EqAuditLogExample.Flow.AuditLog` doesn't match file path `examples/type_classes/EqAuditLogExample/Flow/AuditLog.flx`.

  examples/type_classes/EqAuditLogExample/Flow/AuditLog.flx:1:1
  |
1 | module EqAuditLogExample.Flow.AuditLog {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
